# vocab_trainer

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.json  pyproject.toml
data/: README.md  vocabulary.md  vocabulary_distinctions.md  vocabulary_upper_intermediate.md
scripts/: apply_corrections.py  fix_conjugation.py  import_corrections.py
tests/: bench_llm_gate.py  conftest.py  test_app.py  test_audio.py  test_config.py  test_db.py  test_models.py  test_parsers.py  test_prompts.py  test_question_generator.py  test_srs.py
vocab_trainer/: __main__.py  app.py  audio.py  config.py  db.py  models.py  prompts.py  question_generator.py  srs.py
vocab_trainer/parsers/: distinctions_parser.py  vocabulary_parser.py
vocab_trainer/providers/: base.py  llm_anthropic.py  llm_ollama.py  llm_openai.py  tts_edge.py  tts_elevenlabs.py  tts_piper.py
vocab_trainer/static/: app.js  index.html  style.css
