[project]
name = "vocab-trainer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "edge-tts>=6.1",
]

[project.optional-dependencies]
elevenlabs = ["elevenlabs>=1.0"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
all = ["vocab-trainer[elevenlabs,anthropic,openai]"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24,<1.0"]

[project.scripts]
vocab-trainer = "vocab_trainer.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
